# Force-sensorless-QDD-based-lower-limb-exoskeleton

Linux Application/: .gitignore  .~lock.SysID Knee.csv#  CMakeLists.txt  SysID Knee.csv
Linux Application/Inc/: communication_embedded_system.hpp  exoskeleton.hpp  lsa.hpp  main.hpp
Linux Application/Src/: communication_embedded_system.cpp  exoskeleton.cpp  lsa.cpp  main.cpp
Linux Application/system service configuration/: exoskeleton.sh  exoskeleton_agent.service  monitor_my_service.sh
